--- a/Kconfig
+++ b/Kconfig
@@ -6,8 +6,23 @@ config USR_DRV_USBOTGHS
 
 if USR_DRV_USBOTGHS
 
-#menu "USB-related features"
+menu "USB-related features"
 
-#endmenu
-#
+config USR_DRV_USBOTGHS_DEBUG
+  bool "Activate debuggging for USB OTG HS driver"
+  default n
+  ---help---
+  Activate various debugging for usb OTG High speed.
+  This option is efficient only if KERNEL_SERIAL is activated.
+
+
+config USR_DEV_USBOTGHS_DMA
+  bool "Enable DMA-based transmissions"
+  default n
+  ---help---
+  Activate DMA-based memory copy between device and RAM FIFOs
+
+
+endmenu
+
 endif
